# WolfEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WolfEngine.sln  make-Android.bat
Android/: Android.mk  AndroidManifest.xml  Log.bat  ant.properties  build.xml  make.bat  readme.md
Android/Java/nl/rvanee/wolfengine/: WolfEngine.java
Android/Java/org/libsdl/app/: SDLActivity.java
Android/Resources/values/: strings.xml
Android/jni/: Android.mk  Application.mk
Assets/Scripts/: Test.ws
Assets/Shaders/: Sprite.frag  Sprite.vert
Code/: GameMain.cpp  GameMain.h
Code/Editor/: Editor.cpp  Editor.h  EditorComponent.h  EditorMain.cpp  EditorMain.h  EditorObject.h  Main.cpp  ObjectList.h  TilePicker.cpp  TilePicker.h
Code/Game/: GameMain.cpp  GameMain.h
Code/Test/: Main.cpp
Code/WolfEngine/: API.h  Game.cpp  Game.h  Includes.h  Main_SDL.cpp  WolfEngine.cpp  WolfEngine.h
Code/WolfEngine/Audio/: Music.cpp  Music.h  Sound.cpp  Sound.h
Code/WolfEngine/Components/: Button.cpp  Button.h  Camera.cpp  Camera.h  Script.cpp  Script.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
Code/WolfEngine/ECS/: Component.h  GameObject.cpp  GameObject.h  ObjectManager.cpp  ObjectManager.h  Scene.cpp  Scene.h
Code/WolfEngine/GUI/: GUI.cpp  GUI.h  Window.cpp  Window.h
Code/WolfEngine/Includes/: ECS.h
Code/WolfEngine/Input/: Input.cpp  Input.h  Key.h  Keyboard.cpp  Keyboard.h  Keys.h  Mouse.cpp  Mouse.h
Code/WolfEngine/Math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vectors.h  WolfMath.cpp  WolfMath.h
Code/WolfEngine/Models/: Matrix.cpp  Matrix.h  Point.cpp  Point.h  Quaternion.cpp
Code/WolfEngine/Rendering/: Bitmap.cpp  Bitmap.h  Font.cpp  Font.h  Image.cpp  Image.h  Map.cpp  Map.h  Mesh.cpp  Mesh.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  stb_image.h
Code/WolfEngine/Scripting/: README.md  ScriptECS.cpp  ScriptECS.h  ScriptMain.cpp  ScriptMain.h
Code/WolfEngine/Scripting/add_on/debugger/: debugger.h
Code/WolfEngine/Scripting/add_on/scriptarray/: scriptarray.h
Code/WolfEngine/Scripting/add_on/scriptbuilder/: scriptbuilder.cpp  scriptbuilder.h
Code/WolfEngine/Scripting/add_on/scriptfile/: scriptfile.h
Code/WolfEngine/Scripting/add_on/scripthelper/: scripthelper.h
Code/WolfEngine/Scripting/add_on/scriptmath/: scriptmath.h  scriptmathcomplex.h
Code/WolfEngine/Scripting/add_on/scriptstdstring/: scriptstdstring.h
Code/WolfEngine/Utilities/: Collision.cpp  Collision.h  Debug.cpp  Debug.h  Random.cpp  Random.h  Time.cpp  Time.h  WolfMath.cpp  WolfMath.h
Setup/: Ubuntu.sh
Tests/: Test_Main.cpp
WolfEngine/: ArenaAllocator.cs  Game.cs  IRenderer.cs  Material.cs  Mesh.cs  Program.cs  RenderCommand.cs  ShaderCompiler.cs  WolfEngine.csproj  WolfRendererD3D.cs  WolfRendererMetal.cs
WolfEngine/Models/: Monkey.mtl
WolfEngine/Platform/: MacOSHelpers.cs
WolfEngine/Rendering/: Camera.cs  IRenderer.cs  Material.cs  MaterialFactory.cs  Mesh.cs  RenderCommand.cs  RenderCommandFactory.cs  ShaderCompiler.cs  WolfRendererD3D.cs  WolfRendererMetal.cs
WolfEngine/Shaders/: default.slang  triangle.slang
cmake/: FindGLEW.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
